<resources>

    <string name="app_name">Zakerly</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="facebook_app_id">259345919172555</string>
    <string name="fb_login_protocol_scheme">fb259345919172555</string>
    <string name="text_slider_description_one">You can search about perfect instructors and make a good deal with him</string>
    <string name="text_slider_description_two">You can find all majors and learn as if you were a college student</string>
    <string name="text_slider_description_three">And now you can start your career</string>
    <string name="log_in">Login</string>
    <string name="hint_your_email">Your Email</string>
    <string name="hint_password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="forget_password">Forget Password</string>
    <string name="your_email_to_reset_password">Your Email to reset Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="specialization">Specialization</string>
    <string name="egp_hour">EGP/Hour</string>
    <string name="user_signin_success">User SignIn Successfully</string>
    <string name="login_failure">Login Failure</string>
    <string name="interests">Interests</string>
    <string name="invalid_email">Invalid E-mail</string>
    <string name="this_field_cannot_be_empty">This field can\'t be empty</string>
    <string name="password_must_be_at_least_8">Password must be at least 8 characters</string>
    <string name="user_created">User created successfully</string>
    <string name="btn_sigin">Sign in</string>
    <string name="hint_your_password">Password</string>
    <string name="forget_password_text">Forget Password ?</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="UserSignIn">user_signin_success</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="or">Or</string>
    <string name="select_specialisation">Select Specialisations</string>
    <string name="select_interests">Select Interests</string>
    <string name="reset_password_mail_sent">Reset Password E-mail Sent Successfully</string>
    <string name="failed_to_send_reset_mail">Faield to send reset E-mail</string>
    <string name="email_field_cannot_be_empty">Email field can\'t be empty</string>
    <string name="failed_to_login">Failed to log in</string>
    <string name="my_teachers">My Teachers</string>
    <string name="descriptionOfTeacher">I,am A Teacher Of Android and My HourPrice is 300$ because I,am Gamed Fashekh</string>
    <string name="favorites">Favorites</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="rate_us">Rate us</string>
    <string name="about_zakerly">About Zakerly</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign out</string>
    <string name="FAQ">FAQ</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="chat">Chat</string>
    <string name="video">Video</string>
    <string name="price">Price</string>
    <string name="request">Request</string>
    <string name="students">Students</string>
    <string name="bio">Bio</string>
    <string name="student_feedback">Student Feedback</string>
    <string name="average_rate">Average Rate</string>
    <string name="make_comment">Make Comment</string>
    <string name="rate_instructor">Rate Instructor</string>
    <string name="student_s_opinion">Student\'s Opinion</string>
    <string name="apply">Apply</string>
    <string name="profile_image_updated">Profile Image updated successfully</string>
    <string name="invalid_name">Invalid name</string>
    <string name="add_one_interest">Please add at lease one subject</string>
    <string name="profile_updated_sucessfully">Profile updated successfully</string>
    <string name="failed_to_update_profile">Error updating profile</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="top_instructors">Top Instructors</string>
    <string name="discover">Discover</string>
    <string name="title">Title</string>
    <string name="job_title">Job Title</string>
    <string name="my_students">My Students</string>
    <string name="incoming_lessons">Incoming Lessons</string>
    <string name="completed_lessons">Completed Lessons</string>
    <string name="number_of_hours">Number Of Hours</string>
    <string name="your_students_per_year">Your Students per Year</string>
    <string name="your_hours_per_year">Your Hours per Year</string>
    <string name="no_students_data_yet">No Students data yet</string>
    <string name="hours">Hours</string>
    <string name="no_hours_data_yet" />
    <string name="date">Date: </string>
    <string name="time">Time:</string>
    <string name="lesson">Lesson:</string>
    <string name="student_column">Student: </string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="send_request">Send Request</string>
    <string name="seclude">Schedule</string>
    <string name="what_do_you_need_to_learn">What do you need to learn ?</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="request_sent">Request sent</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="name">Name:</string>
    <string name="classes">Class: </string>
    <string name="you_don_t_have_any_incoming_lessons">You Don\'t have Any Incoming lessons</string>
    <string name="search_about_teacher">Search About Teacher . . .</string>
    <string name="txt_search_about_teacher">Search About Teacher</string>
    <string name="select_search">Select Search</string>
    <string name="hour_price">Hour Price</string>
    <string name="instructor_rate">Instructor Rate</string>
    <string name="type_message">Type Message . . .</string>
    <string name="please_add_some_subjects">Please add some Subjects</string>
    <string name="meeting_invitation">Meeting Invitation</string>
    <string name="incoming">Incoming</string>
    <string name="sending">Sending</string>
    <string name="disconnect">Disconnect</string>
    <string name="remove">Remove</string>
    <string name="thanks_for_feedback">Thanks for feedback</string>
    <string name="feedback_error">Please make sure rate is above 0 and the feedback field isn\'t empty</string>
    <string name="no_messages">No messages</string>
    <string name="with">With</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_to_zakerly">Welcome to Zakerly</string>
    <string name="search_in_chats">Search in Chats</string>
    <string name="price_hour">Price hour</string>
</resources>