<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite"
        />
    <item
        android:id="@+id/account"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/account"
        />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"
        />
</menu>