<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        tools:context=".navigation.settings.SettingsFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="@dimen/_18sdp" />

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_4sdp"
                android:entries="@array/languages" />
        </RelativeLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/dark_mode"
            android:textSize="@dimen/_18sdp"
            android:thumb="@drawable/dark_mode_thumb" />

        <TextView
            android:id="@+id/rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:text="@string/rate_us"
            android:textSize="@dimen/_18sdp"
            app:drawableEndCompat="@drawable/ic_baseline_stars_24" />

        <TextView
            android:id="@+id/about_zakerly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/about_zakerly"
            android:textSize="@dimen/_18sdp"
            app:drawableEndCompat="@drawable/ic_baseline_info_24" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/_18sdp"
            app:drawableEndCompat="@drawable/ic_baseline_lock_24" />

        <TextView
            android:id="@+id/contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/contact_us"
            android:textSize="@dimen/_18sdp"
            app:drawableEndCompat="@drawable/ic_baseline_contact_mail_24" />

        <TextView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/FAQ"
            android:textSize="@dimen/_18sdp"
            app:drawableEndCompat="@drawable/ic_faq" />

        <TextView
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/sign_out"
            android:textSize="@dimen/_18sdp"
            app:drawableEndCompat="@drawable/ic_baseline_logout_24" />
    </LinearLayout>
</layout>