<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    app:cardBackgroundColor="@color/light_sky"
    app:cardCornerRadius="@dimen/_15sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/date"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <TextView
            android:id="@+id/lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/lesson"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/with"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/lesson"
            app:layout_constraintTop_toBottomOf="@id/lesson" />

        <EditText
            android:id="@+id/entry_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_85sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/schedule_bg_text"
            android:focusable="false"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/date"
            app:layout_constraintTop_toTopOf="@id/date" />

        <EditText
            android:id="@+id/entry_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_85sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/schedule_bg_text"
            android:focusable="false"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toTopOf="@id/time" />

        <EditText
            android:id="@+id/entry_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_85sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/schedule_bg_text"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/lesson"
            app:layout_constraintTop_toTopOf="@id/lesson" />

        <EditText
            android:id="@+id/entry_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_85sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/schedule_bg_text"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/student"
            app:layout_constraintTop_toTopOf="@id/student" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/entry_student">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/schedule_bg_text2"
                android:padding="@dimen/_7sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:padding="@dimen/_7sdp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>