<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_18sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/send_request"
                    android:textSize="@dimen/_24sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/sender_image"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/no_user" />

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:src="@drawable/ic_baseline_arrow_forward_24" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/receiver_image"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/no_user" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/learning_topic_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/what_do_you_need_to_learn">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLength="50"
                        android:id="@+id/learning_topic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/number_of_hours_input_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/number_of_hours">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/number_of_hours_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789."
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/request_body_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/request">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/request_body"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:inputType="textCapSentences|textMultiLine|textNoSuggestions"
                        android:scrollbars="vertical"
                        android:singleLine="false" />
                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/red"
                        app:cornerRadius="@dimen/_8sdp" />

                    <Button
                        android:id="@+id/send"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/yellow"
                        app:cornerRadius="@dimen/_8sdp" />
                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>